[gd_scene load_steps=4 format=2]

[ext_resource path="res://Sprites/enemy blob.png" type="Texture" id=1]
[ext_resource path="res://Scripts/NewBadBlob.gd" type="Script" id=2]

[sub_resource type="CircleShape2D" id=1]
radius = 216.009

[node name="BadBlob" type="RigidBody2D" groups=["CanSquash", "Enemy", "Hitable"]]
collision_layer = 3
contacts_reported = 4
contact_monitor = true
script = ExtResource( 2 )
__meta__ = {
"_edit_horizontal_guides_": [  ],
"_edit_vertical_guides_": [  ]
}
shootyTimerTime = 0.8
timerVariation = 0.1

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="."]
polygon = PoolVector2Array( 2, -8, 4, -8, 7, -4, 9, 5, 9, 7, 8, 8, -10, 8, -10, 6, -6, 0 )

[node name="Sprite" type="Sprite" parent="CollisionPolygon2D"]
modulate = Color( 1, 0, 0, 1 )
texture = ExtResource( 1 )

[node name="GunHand" type="Node2D" parent="CollisionPolygon2D"]
position = Vector2( 9, 3 )

[node name="LookArea" type="Area2D" parent="CollisionPolygon2D/GunHand"]
position = Vector2( -9, -3 )

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="CollisionPolygon2D/GunHand/LookArea"]
polygon = PoolVector2Array( 0, 0, 200, -90, 222, 0, 200, 90 )

[node name="HearingRadius" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="HearingRadius"]
shape = SubResource( 1 )

[node name="Timer" type="Timer" parent="."]
wait_time = 0.5

[node name="AimRaycast" type="RayCast2D" parent="."]
position = Vector2( 9, 3 )
enabled = true

[node name="ReactionTimer" type="Timer" parent="."]
wait_time = 2.0

[connection signal="body_entered" from="." to="." method="_on_BadBlob_body_entered"]
[connection signal="area_entered" from="HearingRadius" to="." method="_on_HearingRadius_area_entered"]
[connection signal="body_exited" from="HearingRadius" to="." method="_on_HearingRadius_body_exited"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
[connection signal="timeout" from="ReactionTimer" to="." method="_on_ReactionTimer_timeout"]
